# bluecat

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  bt.go  checksum.go  demo.py  go.mod  go.sum  main.go  pyproject.toml
bluecat/: gb01print.py  main.py  printer.py  protocol.py
client/: .gitignore  package.json  vite.config.ts
client/src/: App.vue
client/src/components/: HelloWorld.vue
server/: README.md  notes.txt  pyproject.toml
server/bluecat/: main.py  protocol.py
