[tool.poetry]
name = "bluecat"
version = "0.1.0"
description = ""
authors = ["Matt Lewis <matt@mplewis.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.1"
python-multipart = "^0.0.5"
uvicorn = "^0.16.0"
bleak = "^0.13.0"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
