[tool.poetry]
name = "bluecat"
version = "0.1.0"
description = ""
authors = ["Matt Lewis <matt@mplewis.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.1"
python-multipart = "^0.0.5"
uvicorn = "^0.16.0"
bleak = "^0.13.0"
crc8 = "^0.1.0"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
black = "^21.12b0"
flake8 = "^4.0.1"
httpie = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
